# doljabi

./: .gitignore  2025-10-10.drawio  2025-10-17.drawio  2025-10-25.drawio  AI_assist_data.md  Cargo.toml  Dockerfile  GEMINI.md  Readme.md  TODO.md  asyncapi.yaml  main.rs  openapi.yaml  package-lock.json  tatus  설명.md
.github/: CODEOWNERS
api_doc/: openapi.yaml
api_doc/generated-rust-models/docs/: Login.md
baduk/: Cargo.toml
baduk/src/: baduk.rs  engine.rs  main.rs  socket.rs  typelist.rs
baduk/src/game/: baduk.rs  badukboard.rs
baduk/src/server/: room.rs
crates/: doljabi engine 설명.md
crates/baduk_board/: Cargo.toml
crates/baduk_board/src/: lib.rs
crates/doljabiproto/: Cargo.toml  build.rs
crates/doljabiproto/assets/: badukboard_old.txt
crates/doljabiproto/doljabiproto/: badukboard.proto  common.proto
crates/doljabiproto/src/: badukboard.rs  common.rs  lib.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: game_core.rs  lib.rs
crates/game_server/: Cargo.toml
crates/game_server/protobuf/: badukboard.proto
crates/game_server/src/: lib.rs
crates/generate_wasm/: Cargo.toml
dbtest/: .gitignore  Cargo.toml  games.sql
dbtest/src/: main.rs
dbtest/static/: login.html  signup.html
doljabi/: SGF_CHANGES.md
doljabi/crates/game_server/: Cargo.toml
doljabi/web/: openapi.json  package-lock.json  sgf-test.html  tailwind.config.js
doljabi/web/src/: App.jsx  index.css
doljabi_engine/: .gitignore  Cargo.toml  build.rs
doljabi_engine/protobuf/: badukboard.proto
doljabi_engine/src/: lib.rs  openapi.json  protocol.proto
doljabi_engine/src/game/: baduk.rs  baduk2.rs  badukboard.rs  mod.rs  omok.rs  omok2.rs
doljabi_engine/src/network/: baduk_room.rs  mod.rs  omok_room.rs  room_manager.rs  socket.rs
doljabi_engine/src/proto/: badukboardproto.rs  mod.rs
doljabi_engine/src/room/: mod.rs  omok_room.rs  room_manager.rs
doljabi_engine/src/soyul/: admin.rs  debug_login.rs  gamehistory_db.rs  kibo.rs  mod.rs  session.rs  session_key.rs  session_service.rs  session_store.rs  soyul_login.rs
doljabi_engine/src/utility/: admin_page.rs  login.rs  mod.rs  rating.rs  room.rs  user.rs  user_manager.rs
front-end-2/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
front-end-2/src/: App.tsx
front-end-omok-3/create-room_so/: page.tsx
front-end-omok-3/waiting-room_so/: page.tsx
front_end/: package-lock.json  package.json
migration_front_end/: package-lock.json  package.json
migration_front_end/src/: App.tsx
room/: Cargo.toml
user_page/: signup.html  style.css
vite/: package-lock.json
web/: .gitignore  badukboard.proto  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-old/: deno.json  package-lock.json  package.json  vite.config.ts
web/public/: analysis.cfg
web/src/: App.jsx  main.tsx
web/ts-proto/: badukboard.ts  readme.md
(+313 files in other folders)
