[package]
name = "doljabi_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20"

# 비동기 및 네트워크
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
axum = "0.8"

tower = "0.5"
tower-http = "0.6"

# JSON 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# protobuf
prost = "0.14"

# 오류 처리
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
path = "src/lib.rs"

[build-dependencies]
prost-build = "0.14.1"
